# EMSX

futures_emsx_strategy/: .gitignore  README.md  pyproject.toml
futures_emsx_strategy/config/: emsx.yaml  environments.yaml  instruments.yaml  market_data.yaml  risk_limits.yaml  strategies.yaml
futures_emsx_strategy/docs/: Makefile  contracts.aux  contracts.out  contracts.tex  contracts.toc
futures_emsx_strategy/examples/: 01_blpapi_smoke.py  02_live_ticks.py  03_minute_bars.py  04_historical_backfill.py  05_emsx_subscriptions.py  06_emsx_stage_order.py  07_emsx_cancel_route.py  08_pipeline_paper_live.py  09_pipeline_emsx_stage.py  10_pipeline_emsx_auto_route.py  Makefile  README.md  __init__.py  _common.py  run_market_data.sh
futures_emsx_strategy/futures_emsx_strategy/: __init__.py
futures_emsx_strategy/futures_emsx_strategy/app/: run_all_local.py  run_execution.py  run_market_data.py  run_reconciler.py  run_strategy.py  topics.py  wiring.py
futures_emsx_strategy/futures_emsx_strategy/backtest/: __init__.py  commission.py  engine.py  replay.py  reports.py  slippage.py
futures_emsx_strategy/futures_emsx_strategy/config/: __init__.py  loader.py
futures_emsx_strategy/futures_emsx_strategy/core/: __init__.py  clock.py  enums.py  events.py  exceptions.py  identifiers.py  logging.py
futures_emsx_strategy/futures_emsx_strategy/execution/: __init__.py  base.py  emsx_adapter.py  emsx_mapper.py  emsx_requests.py  emsx_state_machine.py  emsx_subscriptions.py  paper_adapter.py
futures_emsx_strategy/futures_emsx_strategy/market_data/: __init__.py  bar_builder.py  base.py  bloomberg_provider.py  contract_resolver.py  mock_provider.py  stale_data_monitor.py  tick_store.py
futures_emsx_strategy/futures_emsx_strategy/messaging/: __init__.py  bus.py  codec.py  in_memory_bus.py  kafka_bus.py  redis_bus.py
futures_emsx_strategy/futures_emsx_strategy/monitoring/: __init__.py  alerts.py  dashboards.md  health.py  metrics.py
futures_emsx_strategy/futures_emsx_strategy/orders/: __init__.py  idempotency.py  lifecycle.py  models.py  order_manager.py  sizing.py  throttles.py
futures_emsx_strategy/futures_emsx_strategy/portfolio/: __init__.py  exposure.py  fills.py  pnl.py  positions.py  reconciliation.py
futures_emsx_strategy/futures_emsx_strategy/risk/: __init__.py  kill_switch.py  limits.py  pre_trade.py  session_checks.py  (+1 more)
oms-emsx/oms/: .gitignore  README.md  pyproject.toml
(+63 files in other folders)
