[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oms-emsx"
version = "0.1.0"
description = "Modular OMS for mid-frequency futures trading via Bloomberg EMSX"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0.0",
    "aiofiles>=23.2.0",
    "uvloop>=0.19.0 ; sys_platform != 'win32'",
]

[project.optional-dependencies]
bloomberg = [
    "blpapi>=3.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "fakeredis[lua]>=2.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "config*"]
